--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,64 +1,142 @@
 {
-    "files.associations": {
-        "__bit_reference": "cpp",
-        "__config": "cpp",
-        "__debug": "cpp",
-        "__functional_base": "cpp",
-        "__hash_table": "cpp",
-        "__locale": "cpp",
-        "__mutex_base": "cpp",
-        "__nullptr": "cpp",
-        "__split_buffer": "cpp",
-        "__string": "cpp",
-        "__threading_support": "cpp",
-        "__tuple": "cpp",
-        "algorithm": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "bitset": "cpp",
-        "cctype": "cpp",
-        "chrono": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "complex": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "exception": "cpp",
-        "string_view": "cpp",
-        "functional": "cpp",
-        "initializer_list": "cpp",
-        "iomanip": "cpp",
-        "ios": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "iterator": "cpp",
-        "limits": "cpp",
-        "locale": "cpp",
-        "memory": "cpp",
-        "mutex": "cpp",
-        "new": "cpp",
-        "ostream": "cpp",
-        "ratio": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "string": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "unordered_map": "cpp",
-        "utility": "cpp",
-        "vector": "cpp",
-        "*.tcc": "cpp",
-        "hashtable": "cpp"
-    }
+	"C_Cpp.autocomplete": "Default",
+	"C_Cpp.intelliSenseEngine": "Default",
+	"C_Cpp.dimInactiveRegions": false,
+	"C_Cpp.preferredPathSeparator": "Forward Slash",
+	"C_Cpp.loggingLevel": "Warning",
+	"C_Cpp.workspaceParsingPriority": "highest",
+	"C_Cpp.enhancedColorization": "Disabled",
+
+	"debug.toolBarLocation": "docked",
+
+	"editor.fontFamily": "'Ubuntu Mono', 'Courier', 'Courier New', Consolas, monospace",
+	"editor.lineHeight": 20,
+	"editor.fontSize": 12,
+	"editor.tabSize": 4,
+	"editor.insertSpaces": false,
+
+	"files.encoding": "utf8",
+	"files.trimTrailingWhitespace": true,
+	"files.eol": "\n",
+	"files.exclude": {
+		//".vscode/_*.json": true,
+		".vscode/tasks.json": true,
+		".vscode/launch.json": true,
+		"env/windows/*.sh": true,
+		"env/osx/dmg.applescript": true,
+		"Makefile": true,
+		"build.sh": true,
+		"gmon.out": true,
+		"bin/": true,
+		"build/": true,
+		"**/*.7z": true,
+		"**/*.rar": true,
+		"**/Thumbs.db": true
+	},
+	"files.associations": {
+		"*.json": "jsonc",
+		"*.stats": "cpp",
+		"*.desktop": "properties",
+		".clang-format": "yaml",
+		"__bit_reference": "cpp",
+		"__debug": "cpp",
+		"__functional_base": "cpp",
+		"__hash_table": "cpp",
+		"__locale": "cpp",
+		"__mutex_base": "cpp",
+		"__nullptr": "cpp",
+		"__split_buffer": "cpp",
+		"__string": "cpp",
+		"__threading_support": "cpp",
+		"__tree": "cpp",
+		"__tuple": "cpp",
+		"algorithm": "cpp",
+		"array": "cpp",
+		"atomic": "cpp",
+		"bitset": "cpp",
+		"cctype": "cpp",
+		"chrono": "cpp",
+		"cmath": "cpp",
+		"complex": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"deque": "cpp",
+		"exception": "cpp",
+		"optional": "cpp",
+		"string_view": "cpp",
+		"fstream": "cpp",
+		"functional": "cpp",
+		"future": "cpp",
+		"initializer_list": "cpp",
+		"iomanip": "cpp",
+		"ios": "cpp",
+		"iosfwd": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"iterator": "cpp",
+		"limits": "cpp",
+		"list": "cpp",
+		"locale": "cpp",
+		"map": "cpp",
+		"memory": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"numeric": "cpp",
+		"ostream": "cpp",
+		"random": "cpp",
+		"ratio": "cpp",
+		"regex": "cpp",
+		"set": "cpp",
+		"sstream": "cpp",
+		"stack": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"string": "cpp",
+		"system_error": "cpp",
+		"thread": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"typeinfo": "cpp",
+		"unordered_map": "cpp",
+		"utility": "cpp",
+		"variant": "cpp",
+		"vector": "cpp",
+		"__config": "cpp",
+		"__errc": "cpp",
+		"__node_handle": "cpp",
+		"bit": "cpp"
+	},
+
+	"terminal.integrated.shell.windows": "C:/Program Files/Git/bin/bash.exe",
+	"terminal.integrated.env.windows": {
+		"Path": "C:/mingw32/bin;C:/SFML-2.5.1/bin"
+	},
+	"terminal.integrated.env.linux": {
+		"PATH": "/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
+	},
+	"terminal.integrated.env.osx": {
+		"PATH": "/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
+	},
+
+	"workbench.colorCustomizations": {
+		"statusBar.background": "#8ac242",
+		"statusBar.foreground": "#ffffff",
+		"statusBar.debuggingBackground": "#5e9517",
+		"statusBar.debuggingForeground": "#ffffff",
+		"terminal.ansiBrightRed": "#ee3355",
+		"terminal.ansiBrightYellow": "#ffcc55",
+		"terminal.ansiBrightGreen": "#a5ea4f",
+		"terminal.ansiBrightBlue": "#5599ff"
+	},
+
+	"[applescript]": {
+		"files.encoding": "utf8"
+	}
 }
