--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,12 +20,12 @@
 	"files.eol": "\n",
 	"files.exclude": {
 		//".vscode/_*.json": true,
-		".vscode/tasks.json": true,
-		".vscode/launch.json": true,
+		//".vscode/tasks.json": true,
+		//".vscode/launch.json": true,
 		"env/windows/*.sh": true,
 		"env/osx/dmg.applescript": true,
-		"Makefile": true,
-		"build.sh": true,
+		//"Makefile": true,
+		//"build.sh": true,
 		"gmon.out": true,
 		"bin/": true,
 		"build/": true,
